# piper-mou

./: cali.py  cam2target.py
moveit_mujoco_interface/: Notice.md
piper_mujoco/: environment.xml  package.xml  setup.cfg  setup.py
piper_mujoco/agilex_piper/: d435i.xml  piper_model.xml  view_piper.py
piper_mujoco/object/: actuator.xml  assets.xml  basket.xml  default.xml  shelf.xml  washing_machine.STL  washing_machine.xml
piper_mujoco/piper_mujoco/: multi_thread_interface.py  piper_interface.py
piper_ros/: READ.ME  README.MD  README.md
piper_ros/src/piper/piper/: piper_ctrl_single_node.py
piper_ros/src/piper_description/urdf/: piper_description.xacro
piper_ros/src/piper_moveit/piper_with_gripper_moveit/: CMakeLists.txt  package.xml
piper_ros/src/piper_moveit/piper_with_gripper_moveit/action/: PoseGoal.action
piper_ros/src/piper_moveit/piper_with_gripper_moveit/config/: moveit_controllers.yaml  piper.ros2_control.xacro  ros2_controllers.yaml
piper_ros/src/piper_moveit/piper_with_gripper_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  wm_demo.launch.py
piper_ros/src/piper_moveit/piper_with_gripper_moveit/src/: Logic.py  joint_goal.cpp  planning_scene.cpp  pose_goal.cpp
